update start script and enhance dark mode styles; fix demo links in index.html

--- a/src/style/_base.css
+++ b/src/style/_base.css
@@ -38,6 +38,14 @@ body {
   padding: 0;
 }
 
+body.dark {
+  --bg-color: #000;
+  --bg-secondary-color: #131316;
+  --font-color: #f5f5f5;
+  --color-grey: #ccc;
+  --color-darkGrey: #777;
+}
+
 h1,
 h2,
 h3,
